k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exagrad-student-service
  labels:
    app: exagrad-student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exagrad-student-service
  template:
    metadata:
      labels:
        app: exagrad-student-service
    spec:
      containers:
        - name: exagrad-student-service
          image: ghcr.io/agile-software-engineering-25/team-13-backend-exagrad-student-service:sha-dc275b6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
          env: # add environment variables here if  needed
            - name: SOME_ENVIRONMENT_VARIABLE
              value: "ᓚᘏᗢ"
