k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  labels:
    app: <service-name>
spec:
  selector:
    app: <service-name>
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
